<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            tools:context=".ui.currency.view.MainActivity">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/convert_currency"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/amount"
                android:textSize="@dimen/_14ssp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/amountEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/dimen_5dp"
                android:inputType="number"
                android:minHeight="?attr/actionBarSize"
                android:padding="7dp"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/required_the_amount_to_be_converted"
                android:textSize="@dimen/_10ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_14ssp"
                android:text="@string/from" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fromCurrencySymbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/euro"
                android:inputType="text"
                android:minHeight="?attr/actionBarSize"
                android:padding="7dp"
                android:textSize="@dimen/_12ssp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/required_the_three_letter_currency_code_of_the_currency_you_would_like_to_convert_from"
                android:textSize="@dimen/_10ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/to"
                android:textSize="@dimen/_14ssp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/toCurrencySymbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/gbp"
                android:inputType="text"
                android:minHeight="?attr/actionBarSize"
                android:padding="7dp"
                android:textSize="@dimen/_12ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/required_the_three_letter_currency_code_of_the_currency_you_would_like_to_convert_to"
                android:textSize="@dimen/_10ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date"
                android:textSize="@dimen/_14ssp"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/dateEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_bg"
                android:hint="@string/date_hint"
                android:inputType="date"
                android:padding="7dp"
                android:textSize="@dimen/_12ssp"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/convertBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/convert"
                android:textSize="@dimen/_10ssp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/result"
                android:textSize="@dimen/_14ssp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/resultTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/_22ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</layout>